# dpds_sidecar

./: README.md  pyproject.toml
cache/: financials.json  inventory.json  supplier.json
dpds_sidecar/: cache.py  client.py
sample_dpds/: customer.json  employee.json  feedback.json  marketing.json  product.json  sales.json  traffic.json
